maybe fix burger menu on mobile phones, take 4

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -196,7 +196,7 @@
     padding: 0 0.5rem;
     border: 0;
     outline: none;
-    background-color: $body-color;
+    background-color: $background-color;
     color: $text-color;
     cursor: pointer;
   }
@@ -374,7 +374,7 @@
   color: $gray;
   text-transform: uppercase;
   letter-spacing: 1px;
-  background-color: #fff;
+  background-color: $background-color;
   border: 1px solid $border-color;
   border-radius: $border-radius;
   box-shadow: $box-shadow;
